examples/gke/tei-deployment/gpu-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tei-service
spec:
  selector:
    app: tei-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
