examples/gke/tei-deployment/gpu-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tei-ingress
spec:
  ingressClassName: "gce"
  rules:
    - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tei-service
              port:
                number: 8080
